# mlcompiler-notes

./: .gitignore  README.md
langs/eva/: README.md  evalang.bnf  pyproject.toml
langs/eva-llvm/: Makefile  eva  evallvm.cpp  out.ll
langs/eva/evalang/: __init__.py  environment.py  eva.py  parse.py  transformer.py  typecheck.py  typeenvironment.py  types.py
langs/eva/tests/: test_arith.py  test_block.py  test_class.py  test_control.py  test_functions.py  test_simple.py  test_variables.py
langs/eva/tests/types/: test_block_type.py  test_class_types.py  test_conditionals_type.py  test_function_type.py  test_generic_types.py  test_infer_arith.py  test_simple_types.py  test_type_declarations.py  test_union_type.py  test_variables_type.py
langs/kaleidoscope/: lang.cpp
langs/simple/: Makefile  ast.cpp  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h  simple.cpp  simplelang  token.cpp  token.h
langs/teeny/: lex.py  parse.py  teeny.py
llvm/: fib.py
llvm/beazley/: hello.ll  hellollvm.py  main.c  runtime.c
llvm/pylite/: ast.py  codegen.py  lexer.py  main.py  output.ll  parser.py  test.toy
mlc/: assignment1.ipynb  tensorprog.ipynb  tir-exercises.ipynb
nonml/beazley/: machine.py
nonml/cs106l/: main.cpp  wikiscraper.cpp
nonml/ezyang-pl-class/: 01-Basic.hs  02-Calculator.hs  04-Monads.hs  06-lazy.js
nonml/lispy/: lisp.py
nonml/neu-cs4400/: assignment1.rkt  assignment2.rkt  assignment3.rkt  assignment4.rkt  calc.rkt  cond.rkt  cps.ml  lam.rkt  let.rkt  main.ml  main.ml.1  stlc.rkt  tutorial.rkt  typechecker.rkt
nonml/teeny/: emit.py  lex.py  out.c  (+2 more)
(+57 files in other folders)
