[tool.poetry]
name = "evalang"
version = "0.1.0"
description = ""
authors = ["calvin d. woo <calvin.d.woo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
